[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Felix Wiegand <fxwiegand@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1"
clap = "3.0.0-beta.2"

[[bin]]
name = "advent-of-code-2020"
path = "main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
