[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Felix Wiegand <fxwiegand@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1"
clap = "3.0.0-beta.2"
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "*"
queue = "0.3.2-final"

[[bin]]
name = "advent-of-code-2020"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
